# color_coded

./: .color_coded  .vimrc  .ycm_extra_conf.py  CMakeLists.txt
cmake/: FindLLVM.cmake
include/: core.hpp
include/async/: queue.hpp  task.hpp  temp_file.hpp
include/clang/: compile.hpp  token.hpp
include/conf/: args_view.hpp  defaults.hpp  load.hpp
include/detail/: resource.hpp
include/env/: environment.hpp
include/lua/: eval.hpp
include/vim/: buffer.hpp  commands.hpp  highlight.hpp
src/: main.cpp
test/include/: config.hpp
